--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       content="BtTIYHQXhgYx0vuZAHHgnQmcaMESPNDx03id0_h-cp4"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="BtTIYHQXhgYx0vuZAHHgnQmcaMESPNDx03id0_h-cp4" />
     <title>719 Arbor - Tree Service in Colorado Springs</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
