--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="google-site-verification"
+      content="BtTIYHQXhgYx0vuZAHHgnQmcaMESPNDx03id0_h-cp4"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>719 Arbor - Tree Service in Colorado Springs</title>
     <link rel="stylesheet" href="styles.css" />
